# hedp

./: .env.example  .gitignore  HEDP_CODEX_CONTEXT.md  PROJECT.md  README.md  SPECIFICATION.md  pyproject.toml
docs/: 01_collection.md  02_storage.md  03_intelligence.md  04_execution.md  current-layout.md  cutover-runbook.md  cutover-status-2026-07-22.md  directory-policy.md  local-configuration.md  name-and-renaming.md  post-cutover-monitoring.md  python-runtime.md  security-policy.md  workspace-audit-2026-07-22.md
scripts/: check_installed_package.py  check_post_cutover.py  check_python_runtime.py  check_release_readiness.py  create_post_cutover_snapshot.py  environment_compatibility.sh  inspect_switchbot.py  install_macos_daily_health_launchd.sh  install_macos_device_realtime_launchd.sh  install_macos_equipment_launchd.sh  install_macos_launchd.sh  install_macos_switchbot_launchd.sh  migrate_local_configuration.py  run_daily.sh  run_daily_health.sh  run_device_realtime.sh  run_equipment_daily.sh  run_switchbot_hourly.sh  run_with_timeout.py  switch_macos_launchd_job.sh  uninstall_macos_launchd.sh
tests/: test_application.py  test_configuration.py  test_daily_health.py  test_documentation_consistency.py  test_fusionsolar_alarm_collector.py  test_fusionsolar_battery_dc_collector.py  test_fusionsolar_client.py  test_fusionsolar_collector.py  test_fusionsolar_device_realtime_collector.py  test_fusionsolar_energy_balance_collector.py  test_fusionsolar_energy_balance_record_builder.py  test_fusionsolar_gas_queue_importer.py  test_fusionsolar_record_builder.py  test_fusionsolar_report_importer.py  test_gas_auth_health.py  test_gas_source.py  test_inspect_switchbot.py  test_local_configuration_migration.py  test_main.py  test_package.py  (+13 more)
(+57 files in other folders)
