[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "hedp"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cryptography>=42",
    "requests>=2.31",
]

[project.scripts]
hedp = "hedp.main:cli"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]
target-version = "py39"
