[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "sumicore"
version = "0.2.0"
description = "Long-lived household evidence, intelligence, and control platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42",
    "requests>=2.31",
    "urllib3>=2.2",
]

[project.scripts]
sumicore = "sumicore.main:cli"
hedp = "hedp.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hedp*", "sumicore*"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]
target-version = "py311"
